syntax = "proto3";

import "graph_sage_common.proto";
import "config/common_config.proto";

option java_package = "org.neo4j.graphalgo.core.model.proto";
option java_outer_classname = "TrainConfigsProto";

message GraphSageTrainConfig {
  AlgoBaseConfigProto algoBaseConfig = 1;
  ModelConfigProto modelConfig = 2;
  BatchSizeConfigProto batchSizeConfig = 3;
  IterationsConfigProto iterationsConfig = 4;
  ToleranceConfigProto toleranceConfig = 5;
  EmbeddingDimensionConfigProto embeddingDimensionConfig = 6;
  RelationshipWeightConfigProto relationshipWeightConfig = 7;
  FeaturePropertiesConfigProto featurePropertiesConfig = 8;

  repeated int64 sampleSizes = 9;
  AggregatorType aggregator = 10;
  ActivationFunction activationFunction = 11;
  double learningRate = 12;
  int32 epochs = 13;
  int32 searchDepth = 14;
  int32 negativeSampleWeight = 15;
  bool degreeAsProperty = 16;
  ProjectedFeatureDimension projectedFeatureDimension = 17;
}

message ProjectedFeatureDimension {
  int32 value = 1;
  bool present = 2;
}

message NodeClassificationTrainConfig {
  AlgoBaseConfigProto algoBaseConfig = 1;
  ModelConfigProto modelConfig = 2;
  FeaturePropertiesConfigProto featurePropertiesConfig = 3;

  RandomSeed randomSeed = 4;
  repeated string metrics = 5;
  double holdoutFraction = 6;
  int32 validationFolds = 7;
  string targetProperty = 8;
  repeated string params = 9;
}

message LinkPredictionTrainConfig {
  AlgoBaseConfigProto algoBaseConfig = 1;
  ModelConfigProto modelConfig = 2;
  FeaturePropertiesConfigProto featurePropertiesConfig = 3;

  RandomSeed randomSeed = 4;
  int32 validationFolds = 5;
  repeated string params = 6;
  double negativeClassWeight = 7;
  string trainRelationshipType = 8;
  string testRelationshipType = 9;
}

message RandomSeed {
  int64 value = 1;
  bool present = 2;
}
